--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+*{
+    margin:0%;
+    padding:0%;
+    border:none;
+}
+
 body{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:poppins, sans-serif;
+    font-weight:300;
     
 }
 
