--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,4 +69,19 @@ margin: 20px;
   transition: all 0.3s ease-in-out;
 }
 
+#lhimage-outer{
+    height:600px;
+    width:100%;
+    overflow: hidden;
+    
 }
+
+#lhimage{
+    height:600px;
+    width:100%;
+    background:url('../images/lhimage.webp') no-repeat center center;
+   
+}
+
+
+
