--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,12 +76,42 @@ margin: 20px;
     
 }
 
+
+
+
+#lhimage-outer{
+    height:600px;
+    width:100%;
+    overflow:hidden;
+
+
+    
+}
+
 #lhimage{
     height:600px;
     width:100%;
     background:url('../images/lhimage.webp') no-repeat center center;
    
+    /* Animation to run on web page rendering*/
+
+    animation-name: lh-zoom;
+    animation-duration: 10s;
+    animation-fill-mode: forwards;
 }
 
 
+/* LH image transition zoom */
+@keyframes lh-zoom {
+    from{
+        transform: scale(1);
 
+    }
+    to{
+        transform: scale(1.2);
+
+
+    }
+
+
+}
