Add Top 10 Life Hacks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ h1, h2 {
 
     float: left;
     font-size: 300%;
+    margin-left: 30px;
 }
 
 /* ul links to other sections on page*/
@@ -84,9 +85,13 @@ margin: 20px;
     width:100%;
     overflow:hidden;
 
-
-    
+    position:relative;
 }
+
+#lhoverlay, lhoverlay h2{
+    color: black;
+}
+    
 
 #lhimage{
     height:600px;
@@ -112,6 +117,58 @@ margin: 20px;
 
 
     }
+
+
+}
+
+#lhoverlay{
+    font-size: 130%;
+    font-family: poppins, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    width: 300px;
+    height: 200px;
+   
+    padding-top: 50px;
+    padding-left: 10px;
+    background-color: rgba(2, 167, 212, .7);
+    
+    top:30px;
+    right: 150px;
+
+    position:absolute;
+
+}
+
+/* Section "Most Popular Life hacks"*/
+
+#most-pop{
+    height: 600px;
+}
+
+#left-about{
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: red;
+
+
+}
+
+#right-about{
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: green;
+
+
+}
+
+#center-about{
+    padding-top: 30px;
+    width: 33%;
+    margin: 0 auto;
+    background-color: yellow;
 
 
 }
