--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,19 +150,14 @@ margin: 20px;
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: red;
-
-
 }
 
 #right-about{
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: green;
-
-
 }
+
 
 #center-about{
     padding-top: 30px;
@@ -170,5 +165,42 @@ margin: 20px;
     margin: 0 auto;
     background-color: yellow;
 
+
+}
+hr{
+    border-top: 1px solid #3a3a3a ;
+    width: 100%;
+    margin: 5px 0;
+}
+
+
+.left-about-heading{
+    width: 300px;
+    float:right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+    
+
+}
+
+
+.right-about-heading{
+    width: 300px;
+    float:left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+    padding: 5px;
+
+}
+
+.right-about-heading h2{
+    text-align: right;
+
+}
+
+.right-about-heading p{
+    text-align: right;
 
 }
