--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ margin: 20px;
     padding-top: 30px;
     width: 33%;
     margin: 0 auto;
-    background-color: yellow;
+    
 
 
 }
@@ -204,3 +204,68 @@ hr{
     text-align: right;
 
 }
+
+#mostp{
+    text-align: center;
+    margin: 40px;
+    font-size: 250%;
+
+}
+
+#hexborder{
+   
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  width: 320px;
+  height: 277.12px; /* width * 0.866 */
+  background:#46c7db;
+  box-sizing: border-box;
+  -webkit-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
+  -moz-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
+   
+}
+
+.hex-img {
+    position: absolute;
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+    -webkit-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
+    -moz-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
+  }
+
+  #hex-bg{
+    background:url(../images/lifehacksimg.webp) no-repeat center center;
+    height:100%;
+
+  }
+
+  img {
+    --s: 320px;   /* the size of the image */
+    --b: 8px;     /* the border thickness*/
+    --g: 14px;    /* the gap */
+    --c: #4ECDC4; /* the color */
+
+
+    position: absolute;
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+    -webkit-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
+    -moz-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
+    width: var(--s);
+    aspect-ratio: 1;
+    outline: calc(var(--s)/2) solid #0009;
+    outline-offset: calc(var(--s)/-2);
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  img:hover {
+    outline: var(--b) solid var(--c);
+    outline-offset: var(--g);
+  }
+  
+  img + img {
+    border-radius: 50%;
+  }
