--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,3 +178,38 @@ hr{
 
 }
 
+/* life hacks youtube embed videos*/
+#lhvids{
+    height: 600px;
+}
+
+  
+#tubevids{
+
+display:block;
+margin: 0 auto;
+text-align: center;
+margin: 5px;
+font-size: 250%;
+
+}
+
+
+.tubevidz iframe {
+
+    vertical-align: top;
+    margin: 0 auto;
+    padding-top: 5px;
+    width: 25%;
+    float: left;
+    height: 300px;
+    
+}
+
+iframe {
+        max-width: 100%;
+        height:200px;
+        
+        
+      }
+  
