--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,7 @@ hr{
 
 /* life hacks youtube embed videos*/
 #lhvids{
-    height: 600px;
+    height: 300px;
 }
 
   
@@ -193,6 +193,7 @@ margin: 5px;
 font-size: 250%;
 
 }
+
 
 
 .tubevidz iframe {
@@ -212,4 +213,56 @@ iframe {
         
         
       }
+
+
+/* Sign up form */
   
+#sign-up{
+    height: 600px;
+    
+
+}
+
+#sign-up h2{
+    display:block;
+    margin: 0 auto;
+    text-align: center;
+    margin: 5px;
+    font-size: 250%;
+
+}
+
+.login{
+    
+    margin: 1px auto;
+    text-align: left;
+    padding-left: 20px;
+    font-size: 150%;
+    width: 100%;   
+    
+}
+
+label {
+    display: inline-block;
+    width: 200px;
+    color: #777777;
+  }
+
+input {
+    padding: 5px 10px;
+    border: 1px solid black;
+    width: 300px;
+  }
+
+
+.button1{
+  width: 100px;
+  height: 50px;
+  background-color: #007bff;
+  border-radius: 1px;
+  color: white;
+  padding: 10px 10px;
+  text-align: center center;
+  font-size: 20px;
+
+}
