add media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,196 +1,170 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 /* default maring,padding and border removed */
-*{
-    margin:0%;
-    padding:0%;
-    border:none;
-    color:black;
+* {
+  margin: 0%;
+  padding: 0%;
+  border: none;
+  color: black;
 
 }
 
-body{
-    font-family:poppins, sans-serif;
-    font-weight:300;
-    
-}
-
-h1, h2 {
-
-    font-family:poppins, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    color: black;
+body {
+  font-family: poppins, sans-serif;
+  font-weight: 300;
 
 }
-#logo{
 
-    float: left;
-    font-size: 300%;
-    margin-left: 30px;
+h1,h2 {
+
+  font-family: poppins, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  color: black;
+
+}
+
+#logo {
+
+  float: left;
+  font-size: 300%;
+  margin-left: 30px;
 }
 
 /* ul links to other sections on page*/
 
-#menu{
-    font-size: 150%;
-    float: right;
-    letter-spacing: 2.5px;
+#menu {
+  font-size: 150%;
+  float: right;
+  letter-spacing: 2.5px;
 }
 
-#menu li{
-float: left;
-list-style: none;
-margin: 20px;
-
-}
-
-#menu a{
-    text-decoration: none;
+#menu li {
+  float: left;
+  list-style: none;
+  margin: 20px;
 
 }
 
-#menu, #logo{
-    line-height: 75px;
+#menu a {
+  text-decoration: none;
+
 }
 
-
-
-#lhimage-outer{
-    height:600px;
-    width:100%;
-    overflow: hidden;
-    
+#menu,#logo {
+  line-height: 75px;
 }
 
 
 
-
-#lhimage-outer{
-    height:600px;
-    width:100%;
-    overflow:hidden;
-
-    position:relative;
-}
-
-#lhoverlay, lhoverlay h2{
-    color: black;
-}
-    
-
-#lhimage{
-    height:600px;
-    width:100%;
-    background:url('../images/lhimage.webp') no-repeat center center;
+#lhimage-outer {
+  height: 600px;
+  width: 100%;
+  overflow: hidden;
 
 }
 
 
-#lhoverlay{
-    font-size: 130%;
-    font-family: poppins, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    width: 300px;
-    height: 200px;
-   
-    padding-top: 50px;
-    padding-left: 10px;
-    background-color: rgba(2, 167, 212, .7);
-    
-    top:30px;
-    right: 150px;
 
-    position:absolute;
+
+#lhimage-outer {
+  height: 600px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+#lhoverlay,lhoverlay h2 {
+  color: black;
+}
+
+
+#lhimage {
+  height: 600px;
+  width: 100%;
+  background: url('../images/lhimage.webp') no-repeat center center;
+
+}
+
+
+#lhoverlay {
+  font-size: 130%;
+  font-family: poppins, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  width: 300px;
+  height: 200px;
+
+  padding-top: 50px;
+  padding-left: 10px;
+  background-color: rgba(2, 167, 212, .7);
+
+  top: 30px;
+  right: 150px;
+
+  position: absolute;
 
 }
 
 /* Section "Most Popular Life hacks"*/
 
-#most-pop{
-    height: 600px;
-}
-
-#left-about{
-    padding-top: 30px;
-    width: 33%;
-    float: left;
-}
-
-#right-about{
-    padding-top: 30px;
-    width: 33%;
-    float: right;
+#most-pop {
+  height: 600px;
+  
 }
 
 
-#center-about{
-    padding-top: 30px;
-    width: 33%;
-    margin: 0 auto;
-    
-
-
-}
-hr{
-    border-top: 1px solid #3a3a3a ;
-    width: 100%;
-    margin: 5px 0;
+hr {
+  border-top: 1px solid #3a3a3a;
+  width: 100%;
+  margin: 5px 0;
 }
 
 
-.left-about-heading{
-    width: 350px;
-    float:right;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
-    
+
+#mostp {
+  text-align: center;
+  margin: 10px;
+  font-size: 250%;
 
 }
 
-
-.right-about-heading{
-    width: 350px;
-    float:left;
-    line-height: 20px;
-    clear: both;
-    margin-bottom: 50px;
-    padding: 5px;
-
-}
-
-.right-about-heading h2{
-    text-align: right;
-
-}
-
-.right-about-heading p{
-    text-align: right;
-
-}
-
-#mostp{
+#most-pop p{
     text-align: center;
-    margin: 40px;
-    font-size: 250%;
+    font-family: poppins;
+    text-decoration-style: solid black;
+  
+}
+.most-pop-contents{
+max-width: 100%;
+margin: 0 auto;
+padding: 50px;
+}
+
+
+
+#table1 th, td {
+    border: 2px solid #3a3a3a;
+    width: 30%;
+    text-align: center;
+    max-width: 100%;
+    
 
 }
 
 /* life hacks youtube embed videos*/
-#lhvids{
-    height: 300px;
+#lhvids {
+  height: 300px;
 }
 
-  
-#tubevids{
 
-display:block;
-margin: 0 auto;
-text-align: center;
-margin: 5px;
-font-size: 250%;
+#tubevids {
+
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  margin: 5px;
+  font-size: 250%;
 
 }
 
@@ -198,64 +172,66 @@ font-size: 250%;
 
 .tubevidz iframe {
 
-    vertical-align: top;
-    margin: 0 auto;
-    padding-top: 5px;
-    width: 25%;
-    float: left;
-    height: 300px;
-    
+  vertical-align: top;
+  margin: 0 auto;
+  padding-top: 5px;
+  width: 25%;
+  float: left;
+  height: 300px;
+  padding-bottom: 10px;
+
 }
 
 iframe {
-        max-width: 100%;
-        height:200px;
-        
-        
-      }
+  max-width: 100%;
+  height: 200px;
+
+
+}
 
 
 /* Sign up form */
-  
-#sign-up{
-    height: 600px;
-    
+
+#sign-up {
+  height: 600px;
+  text-align: center;
+
 
 }
 
-#sign-up h2{
-    display:block;
-    margin: 0 auto;
-    text-align: center;
-    margin: 5px;
-    font-size: 250%;
+#sign-up h2 {
+  display: block;
+  margin: 0 auto;
+  margin: 5px;
+  font-size: 250%;
 
 }
 
-.login{
-    
-    margin: 1px auto;
-    text-align: left;
-    padding-left: 20px;
-    font-size: 150%;
-    width: 100%;   
-    
+.login {
+
+  margin: 1px auto;
+  padding-left: 20px;
+  font-size: 150%;
+  width: 100%;
+  padding-top: 40px;
+
 }
 
 label {
-    display: inline-block;
-    width: 200px;
-    color: #777777;
-  }
+  display: inline-block;
+  width: 150px;
+  text-align: left;
+  color: #777777;
+}
 
 input {
-    padding: 5px 10px;
-    border: 1px solid black;
-    width: 300px;
-  }
+  padding: 5px 10px;
+  border: 1px solid black;
+  width: 300px;
+}
 
 
-.button1{
+.button1 {
   width: 100px;
   height: 50px;
   background-color: #007bff;
@@ -267,27 +243,106 @@ input {
 
 }
 
-footer{
-    height: 200px;
+footer {
+  height: 300px;
 
 }
 
-.social-links{
+.social-links {
+  text-align: center;
+
+
+}
+
+.social-links li {
+  display: inline-block;
+
+}
+
+.social-links i {
+  font-size: 50px;
+  margin: 2px;
+  padding: 2px;
+  color: black;
+
+
+}
+
+#top-page {
+  height: 100px;
+  text-align: center;
+
+
+}
+
+#top-butt {
+  
+  font-size: 50px;
+  font-family: poppins;
+
+}
+
+footer p{
     text-align: center;
 
-
 }
 
-.social-links li{
-    display: inline-block;
+@media screen and (max-width: 1200px) {
+    #most-pop-contents {
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+        float: left;
+        padding-top: 0%;
+    }
 
-}
+    #table1{
+        max-width: 100%;
+        padding: 0%;
+        float: left;
+        margin: 0 auto;
 
-.social-links i{
-    font-size: 100%;
-    margin:2px;
-    padding: 2px;
-    color: black;
+    }
+
+    #lhvids{
+    width: 65%;
+    height: 1200px;
+    margin: 0 auto;
+    float: left;
+    padding-top: 0%;
+    }
+
+    #sign-up{
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+        float: left;
+        padding-top: 0%;
+
+    }
+
+    footer {
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+        float: left;
+        padding-top: 0%;
+
+    }
+    footer p{
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+        float: left;
+        padding-top: 0%;
+
+    }
+    
+    hr{
+        display: none;
+    }
+
+
 
 
 }
